--- a/microsoft/001. L-Value and R-Value Expressions.md
+++ b/microsoft/001. L-Value and R-Value Expressions.md
@@ -1,7 +1,8 @@
 ---
-url: https://learn.microsoft.com/en-us/cpp/c-language/l-value-and-r-value-expressions?view=msvc-170
+url: "https://learn.microsoft.com/en-us/cpp/c-language/l-value-and-r-value-expressions?view=msvc-170"
 collected_at: "2023-11-21 10:40"
 updated_at: "2023-11-21 10:40"
+translation: "https://dongs.xyz/post/translations/ms-l-value-and-r-value-expressions/"
 ---
 
 ## L-Value and R-Value Expressions
@@ -54,3 +55,7 @@ The default for Microsoft C is that the Microsoft extensions are enabled. Use th
 ## See also
 
 [Operands and Expressions](https://learn.microsoft.com/en-us/cpp/c-language/operands-and-expressions?view=msvc-170)
+
+---
+
+Translation: <https://dongs.xyz/post/translations/ms-l-value-and-r-value-expressions/>
